$Id: ChangeLog,v 1.76 2009/12/23 14:47:10 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU 1.5.0
	- [config] u_config_print_to_fp with brace delimiters for children records;
	  documentation fixes by Mickael Auger
	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
	  that is supplied to the callback function
	- [uri] parse IPv6 numeric addresses as per rfc3986
	- [net] module implementation revamped; u_net_sock_by_addr added; handle
	  wildcard address (i.e. '*') in uri; IPv6 uri to address translator;
	  u_net_uri2sin footprint aligned to other u_net_uri2* interfaces; ...
	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion

LibU 1.4.1
	- [missing] u_va_copy added
	- [string] u_string_do_vprintf bug fix (don't use va_list twice)
	- [test] list tests fix for 64-bit platforms

LibU 1.4.0
	- [config] u_config_get_subkey_value_b bug fix
	- [list] u_list_clear added
	- [misc] u_strlcpy and u_strlcat added
	- added shared lib support for MinGW, Cygwin, Solaris and Dragonfly BSD
	  (need MaKL >= 1.8.x)
	- [list] u_list_foreach and u_list_iforeach macros added
	- [list] u_list_first and u_list_next added to efficiently iterate on lists
	- [misc] added u_strtok_cleanup facility 
	- [misc] deprecate u_tokenize in favour of u_strtok

LibU 1.3.1:
	- [array] add needed #include <stdint.h>
	- [misc] u_atoi fix
	- [misc] u_strtok added
	- [config] fix u_string_aprintf calls (build fix)

LibU 1.3.0:
	- [config] u_config_sort_children added
	- [config] u_config_del_child added
	- [log] u_log_set_{lock,unlock} added to setup locking callbacks (needed on 
	  multi-threading environments)
	- [configure] added --no_docs and --do_test configure flags
	- [array] dynamic array module added (can be disabled via --no_array
	  configure argument)
	- [list] u_list_insert and u_list_del_n added
	- [config] u_config_print_to_fp added
	- [configure] netinet/{tcp,in}.h and sys/socket.h tests