@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.76 2009/12/23 14:47:10 tho Exp $
+$Id: ChangeLog,v 1.77 2009/12/23 15:48:35 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -10,8 +10,10 @@ LibU 1.5.0
 	- [uri] parse IPv6 numeric addresses as per rfc3986
 	- [net] module implementation revamped; u_net_sock_by_addr added; handle
 	  wildcard address (i.e. '*') in uri; IPv6 uri to address translator;
-	  u_net_uri2sin footprint aligned to other u_net_uri2* interfaces; ...
+	  u_net_uri2sin footprint aligned to other u_net_uri2* interfaces;
+	  u_accept prototype fixed for platforms supporting socklen_t type; ...
 	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion
+	- [pwd] use u_strtok instead of deprecated u_tokenize internally
 
 LibU 1.4.1
 	- [missing] u_va_copy added
